[tool.poetry]
name = "liquidation_bot"
version = "0.1.0"
description = ""
authors = ["Devs <devs@ithil.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
argparse = "^1.4.0"
aiohttp = "^3.8.1"
asyncio = "^3.4.3"
art = "^5.5"
statistics = "^1.0.3"
web3 = "^5.30.0"
python-telegram-bot = "^13.13"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.12b0"
isort = "^5.10.1"

[tool.poetry.scripts]
liquidation_bot = "liquidation_bot.main:run_app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
